tests/negative/export_cyclic_a.toit
// Copyright (C) 2018 Toitware ApS. All rights reserved.

import .export_cyclic_test
export foo
